--- a/public_html/importarfuentesgoogle.html
+++ b/public_html/importarfuentesgoogle.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Algo</title>
-	<link rel="stylesheet" href="css/algo.css">
+	<link rel="stylesheet" href="css/impfuentgoogle.css">
 </head>
 <body>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
